cliqz@cliqz.com/chrome/skin/browser.css
#PopupAutoCompleteRichResultCliqz {
    -moz-binding: url("chrome://cliqz/content/components.xml#autocomplete-rich-result-popup-cliqz");
    min-height: 303px; /* fixes bug with popup auto-sizing */
    overflow: hidden;
}

@font-face { font-family: "Lato"; src: url("fonts/Lato-Regular.ttf"); }

#urlbar[focused="true"] { box-shadow: 0 0 1px #3B99FC inset!important; }

/* last search */
.cliqz-urlbar-Last-search-container { max-width: 220px; overflow: hidden; }

.cliqz-urlbar-Last-search {
    background-size: 14px 10px;
    color: white;
    background-color: grey;
    margin: 0px;
    padding: 2px 6px 2px 6px;
    margin-right: 3px;
    border-radius: 1px;
    max-width: 200px;
    text-overflow: ellipsis;
    overflow: hidden;
}

#cliqz-popup {
    padding: 0;
    margin: 0;
    min-width: 500px;
    background: #fff; /* override linux default grey color */
    position: relative;
    color: #333333;
    overflow: hidden;
}

/* reset defaults for dropdown content */
#cliqz-popup * {
    line-height: 1.2em;
    padding: 0;
    margin: 0;
    font-size: 14px;
    font-family: Lato, Helvetica, sans-serif;
    cursor: default;
    border: 0;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    background-repeat: no-repeat;
}

#cliqz-results {
    height: 303px;
    position: relative;
    overflow-x: hidden;
    overflow-y: auto;
}

/* common classes */
.hidden { visibility: hidden; display: none !important; }
#cliqz-results * > em, #cliqz-results * > i,#cliqz-results * > b,#cliqz-results * > span { font-size: inherit }
#cliqz-results em { font-style: normal; font-weight: bold; }
#cliqz-results b { font-weight: bold; }
#cliqz-results i { font-style: italic; }

#cliqz-results .cqz-result-h1, #cliqz-results .cqz-result-h2, #cliqz-results .cqz-result-h3 {
    padding: 14px calc(44px + 65px + 22px) 16px 22px;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}
#cliqz-results .nopadding { padding: 0 }
#cliqz-results .cqz-result-h1 { height: 302px; }
#cliqz-results .cqz-result-h2 { height: 201px; }
#cliqz-results .cqz-result-h3 {	height: 100px; }
#cliqz-results .cqz-result-box { position: relative; border-bottom: 1px solid #CCC; }
#cliqz-results .cqz-result-selected {
    position: absolute;
	top: 10px;
	left: -20px;
	height: 14px;
	width: 14px;

	background-color: #333333;
	border-radius: 0 3px 0 0;
	transform: rotate(42deg);

	-moz-transition: all 0.3s ease;
    transition: all 0.3s ease;
    -moz-backface-visibility: hidden;
    backface-visibility: hidden;
}
#cliqz-results .cqz-result-selected[active="true"] { left: -8px; }
#cliqz-results .cqz-result-debug { float: right; }

/* visited result - history, bookmark, ... */
#cliqz-results .cqz-result-title { font-size: 18px;	color: #8c275f; }
#cliqz-results .cqz-result-title * { font-size: inherit; }
#cliqz-results .cqz-result-title span { color: #cccccc; }
/* unvisited result - cliqz */
#cliqz-results .cqz-result-box[type^="cliqz-results sources-"] .cqz-result-title { color: #506bb8; }

#cliqz-results .cqz-result-url { display: inline-block; color: #999999; margin-top: 6px; }
#cliqz-results .cqz-result-url-ssl { padding-left: 13px; background: url(chrome://cliqzres/content/skin/lock_light.png) no-repeat 2px 5px; }
#cliqz-results .cqz-result-path { visibility: hidden; }
#cliqz-results .cqz-result-desc { margin-top: 4px; max-height: 22px; vertical-align: top; }

/*
    Common class for logo to be reused everywhere.
    Do not change this class if the properties are only dropdown-logo related!
    Change .cqz-result-logo instead
*/
#cliqz-results .cliqz-brand-logo, .cliqz-brand-logo {
    /* container size/shape */
    width: 2.5em;
    height: 2.5em;
    padding: 0.37em;
    box-sizing: border-box;
    border-radius: 50%;
    /* text properties */
    line-height: 1.75em;
    text-align: center;
    font-weight: bold;
    color: white;
    overflow: hidden;
    /* background logo */
    background-origin: content-box;
    background-size: contain;
    background-position: center center;
    background-repeat: no-repeat;
}

/* custom logo definitions */
#cliqz-results .cliqz-brand-logo, .cliqz-brand-logo {
	-moz-transition: all 0.3s ease;
    transition: all 0.3s ease;
}

#cliqz-results .cqz-result-logo {
	position: absolute;
	right: 22px;
    cursor: pointer;
    /* set the size of logo */
    font-size: 26px;
}

#cliqz-results .cqz-result-logo:hover { font-size: 28px; right: 20px }

/* common */
#cliqz-results .cqz-ez-btns { margin: 13px 0px 18px; height: 30px; }
#cliqz-results .cqz-ez-btn {
    border-radius: 3px;
    cursor: pointer;
    color: white;
    padding: 0 9px 2px;
    line-height: 28px;
    margin: 0 7px 4px 0;
    max-width: 150px;
    display: inline-block;
}

/*#cliqz-results .cqz-ez-btn:hover, #cliqz-results .cqz-ez-btn[arrow='true'] { background-color: #cccccc !important; }*/
#cliqz-results .cqz-vert-center1 { position: absolute; }
#cliqz-results .cqz-vert-center { position: absolute; top: 50%;	transform: translateY(-49%); }
#cliqz-results .cqz-image {
    width: 114px; /* 16 */
    height: 64px; /* 9 */
    background-size: cover;
    background-position: center center;
    float: left;
    margin: 2px 10px 0 0;
    position: relative;
    margin-right: 10px;
}
#cliqz-results .cqz-image-news { position: relative; }
#cliqz-results .cqz-image-round { border-radius: 3px; }
#cliqz-results .cqz-image > p {
    position: absolute;
    right: 0;
    bottom: 0;
    padding: 2px 5px;
    background-color: rgba(0, 0, 0, 0.6);
    color: white;
}
#cliqz-results .cqz-result-text { text-align: center; width: 100%; }
#cliqz-results .ez-feedback { position: absolute; bottom: 16px; right: 18px; color: #cccccc; cursor: pointer; }
#cliqz-results .ez-feedback:hover { text-decoration: underline; }
#cliqz-results .cqz-link { color: #88baf8; margin-right: 10px; }
#cliqz-results [arrow="true"]:hover .cqz-result-title { text-decoration: underline; }
/* ... */

